--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <hr class="hr-primary hr-lg w-20 mx-auto my-4" data-animate-delay="0.45" style="animation-delay: 0.45s;">
       <div> 
         <a href="/app" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;">BETTING DAPP</a>
-        <!--<a href="/" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;">WHITEPAPER</a>-->
+        <a href="./assets/pdf/whitepaper_001.pdf" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;" target="_ blank">WHITEPAPER</a>
         <a href="/#crowdsale" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;">CROWDSALE</a>
       </div>
     </div>
@@ -335,7 +335,8 @@
                 <div class="p-2">Phase-1 public sale</div>
               </div>
               <div class="col">
-                <div class="p-2">February 27 - March 17, 2018, 17:00 GMT</div>
+                <!--<div class="p-2">February 27 - March 17, 2018, 17:00 GMT</div>-->
+                <div class="p-2">Dates will be announced later</div>
               </div>
             </div>
             <div class="row no-gutters">
@@ -343,7 +344,8 @@
                 <div class="p-2">Phase-2 public sale</div>
               </div>
               <div class="col">
-                <div class="p-2">March 18 - April 18, 2018</div>
+                <!--<div class="p-2">March 18 - April 18, 2018</div>-->
+                <div class="p-2">Dates will be announced later</div>
               </div>
             </div>
           </div>
@@ -433,6 +435,7 @@
         </div>
         <div class="container p-4">
           <div class="row text-center">
+            <div class="col-lg-2 py-2"></div>
             <!--
             <div class="col-lg-2 py-2">
               <a href="https://telegram.me/STBT" target="_blank">
@@ -442,31 +445,30 @@
             </div>
           -->
             <div class="col-lg-2 py-2">
-              <a href="https://github.com/STOCKSBET" target="_blank" class="social-icons">
+              <a href="https://github.com/StocksBet" target="_blank" class="social-icons">
                 <div class="fab fa-github icon-5x text-primary"></div>
-                <p>github.com/<br>STOCKSBET</p>
+                <p>github.com/<br>StocksBet</p>
+              </a>
+            </div>
+            
+            <div class="col-lg-2 py-2">
+              <a href="https://twitter.com/StocksBet" target="_blank" class="social-icons">
+                <div class="fab fa-twitter icon-5x text-primary"></div>
+                <p>twitter.com/<br>StocksBet</p>
               </a>
             </div>
             <!--
-            <div class="col-lg-2 py-2">
-              <a href="https://twitter.com/STBTTeam" target="_blank" class="social-icons">
-                <div class="fab fa-twitter icon-5x text-primary"></div>
-                <p>twitter.com/<br>STBTTeam</p>
-              </a>
-            </div>
-          -->
-          <!--
             <div class="col-lg-2 py-2">
               <a href="https://reddit.com/r/STBT" target="_blank" class="social-icons">
                 <div class="fab fa-reddit icon-5x text-primary"></div>
                 <p>reddit.com<br>/r/STBT</p>
               </a>
             </div>
-          -->
+            -->
             <div class="col-lg-2 py-2">
               <a href="https://medium.com/stocksbet" target="_blank" class="social-icons">
                 <div class="fab fa-medium icon-5x text-primary"></div>
-                <p>medium.com/<br>STOCKSBET</p>
+                <p>medium.com/<br>StocksBet</p>
               </a>
             </div>
             <div class="col-lg-2 py-2">
@@ -475,6 +477,7 @@
                 <p>discord.gg/<br>a5s5UwX</p>
               </a>
             </div>
+            <div class="col-lg-2 py-2"></div>
           </div>
         </div>
       </div>
