Set metamask install info

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,20 @@
   </div>
 
 
+  <div id="containerBettingWarning" class="container" style="display: none;">
+      <hr class="hr-lg mt-5 mb-3 w-10 mx-auto hr-primary">
+      <h4 class="text-center font-weight-light my-0">
+          For using Stocks.Bet DApp you need to install MetaMask plugin and get a Ropsten Test Ethereum.
+      </h4>
+      <h4 class="text-center font-weight-light mt-2 mb-1 text-muted">
+          <a target="_blank" href="https://blog.bankex.org/how-to-buy-ethereum-using-metamask-ccea0703daec">Please see instructions</a>
+      </h4>
+      <h4 class="text-center font-weight-light mt-2 mb-0 text-muted">
+          <a target="_blank" href="https://blog.bankex.org/how-to-buy-ethereum-using-metamask-ccea0703daec">or use Official site of Metamask.io</a>
+      </h4>
+      <hr class="hr-lg mt-3 mb-3 w-10 mx-auto hr-primary">
+  </div>
+
   <div id="containerBetting" class="container" style="display: none;">
       <hr class="hr-lg mt-5 mb-3 w-10 mx-auto hr-primary">
         <h2 class="text-center text-uppercase font-weight-bold my-0">
@@ -222,7 +236,7 @@
                 <div class="col-md-12">
                   <h4 class="mb-0 font-weight-bold"><span class="text-primary">Market close price | </span> <span id='AAPLpriceStart'></span></h4>
                   <h5 class="text-primary">fix moment | <span class='momentCloseValue'></span> </h5>
-                  <p class="mb-0 text-primary">Pool Total (ETH) | <b><span class='AAPLtotalPool'></b></p>
+                  <p class="mb-0 text-primary">Pool Total (ETH) | <b><span class='AAPLtotalPool'></span></b></p>
                   <p class="mb-0 text-primary">Number of bets | <b><span id='AAPLbetsCount'></span></b></p>
                 </div>
               </div>
