--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 
   <!--Plugin: Retina.js (high def image replacement) - @see: http://retinajs.com/-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <!-- ======== @Region: body ======== -->
@@ -79,7 +86,7 @@
   <div id="highlighted">
     <div class="bg-white overlay overlay-op-6 text-center px-3 py-5 py-lg-10 flex-valign bg-img blazy-bg b-loaded" data-css="{&quot;background-position&quot;: &quot;center bottom&quot;}" style="background-position: center bottom; background-image: url(&quot;assets/img/backgrounds/clouds-2517653_1920.jpg&quot;);">
       <h2 class="display-4 text-white" data-animate-delay="0.2" style="animation-delay: 0.2s;">
-          <img src="/img/logo.png" width="200"><br>
+          <img src="/img/logo.svg" width="200"><br>
           Bet on companies with <span class="font-weight-bold">Stocks.Bet!</span>
       </h2>
       <h3 class="text-grey font-weight-normal" data-animate-delay="0.35" style="animation-delay: 0.35s;">
