account is exist

--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
           <a target="_blank" href="https://blog.bankex.org/how-to-buy-ethereum-using-metamask-ccea0703daec">Please see instructions</a>
       </h4>
       <h4 class="text-center font-weight-light mt-2 mb-0 text-muted">
-          <a target="_blank" href="https://blog.bankex.org/how-to-buy-ethereum-using-metamask-ccea0703daec">or use Official site of Metamask.io</a>
+          <a target="_blank" href="https://metamask.io/">or use Official site of Metamask.io</a>
       </h4>
       <hr class="hr-lg mt-3 mb-3 w-10 mx-auto hr-primary">
   </div>
