--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!--<link href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" rel="stylesheet">-->
   <link href="/css/flag-icon.min.css" rel="stylesheet">
   
-  <title>Stocks.Bet | STBT Ethereum smart contract</title>
+  <title>Stocks.Bet allows you to bet on shares of companies in Blockchain</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +30,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+  <link rel="icon" href=​"/favicon.ico" type="image/x-icon">
   <link rel="manifest" href="/assets/manifest.json">
   <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
   <meta name="msapplication-config" content="/assets/browserconfig.xml">
@@ -50,10 +51,26 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#5bbad5">
   <meta name="theme-color" content="#ffffff">
+
+  <meta property="og:url"           content="http://stocks.bet/" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Stocks.Bet" />
+  <meta property="og:description"   content="Bet on companies" />
+  <meta property="og:image"         content="http://stocks.bet/android-chrome-192x192.png" />
 </head>
 
 <!-- ======== @Region: body ======== -->
 <body class="page page-index-static navbar-layout-default animates-pending">
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_EN/sdk.js#xfbml=1&version=v2.12';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
   <!-- @plugin: page loading indicator, delete to remove loader -->
   <div class="page-loader" data-toggle="page-loader" style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; background-color: rgb(46, 204, 113); z-index: 9999999; display: none;"><div class="fl spinner6" style="position: absolute; left: 681px; top: 513.5px;"><div class="rect1"></div><div class="rect2"></div><div class="rect3"></div><div class="rect4"></div><div class="rect5"></div></div></div>
 
@@ -75,7 +92,11 @@
               </h1>
             </a>
             <div class="header-divider d-none d-lg-block"></div>
-            <div class="header-slogan d-none d-lg-block">STBT Ethereum smart contract</div>
+            <div class="row mt-1">
+              <div class="ml-2 mt-1 header-slogan d-none d-lg-block">STBT Ethereum smart contract</div>
+              <div class="ml-2"><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+              <div class="ml-2 fb-share-button" data-href="http://stocks.bet/" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fstocks.bet%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+            </div>
           </div>
         </div>
       </div>
@@ -89,14 +110,17 @@
           <img src="/img/logo.svg" width="200"><br>
           Bet on companies with <span class="font-weight-bold">Stocks.Bet!</span>
       </h2>
+
+
+
       <h3 class="text-grey font-weight-normal" data-animate-delay="0.35" style="animation-delay: 0.35s;">
           The World’s first DAPP to bet on the price of Stocks.
       </h3>
       <hr class="hr-primary hr-lg w-20 mx-auto my-4" data-animate-delay="0.45" style="animation-delay: 0.45s;">
       <div> 
         <a href="/app" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;">BETTING DAPP</a>
-        <a href="./assets/pdf/whitepaper_002.pdf" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;" target="_ blank">WHITEPAPER</a>
-        <a href="/#crowdsale" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;">CROWDSALE</a>
+        <a href="./assets/pdf/whitepaper.pdf" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;" target="_ blank">WHITEPAPER</a>
+        <a href="/#STBT" class="btn btn-primary btn-rounded btn-lg py-lg-3 px-lg-5" data-toggle="scroll-link" data-animate-delay="0.55" style="animation-delay: 0.55s;">CROWDSALE</a>
       </div>
     </div>
   </div>
@@ -317,52 +341,27 @@
       </div>
     </div>
 
-    <div id="crowdsale">
+
+    <div id="STBT">
       <hr class="my-0">
       <div class="bg-light py-3 py-lg-6 overlay overlay-white overlay-op-9 bg-img blazy-bg b-loaded">
         <div class="container">
           <h3>
-            Crowdsale Date
+            STBT Token
           </h3>
+          We are applied for listing on the <a  style="border-bottom: 1px solid #ccc;" href="https://idex.market">IDEX Exchange</a>.
+          <hr class="mt-0 mb-4 hr-blank">
           <hr class="hr-lg m-0 hr-primary w-20">
           <hr class="mt-0 mb-4 hr-blank">
           <div class="container">
-          <!--
-            <div class="row no-gutters">
+          <div class="row no-gutters">
               <div class="col-lg-3">
-                <div class="p-2">Phase-1 whitelisted sale</div>
+                <div class="p-2">STBT Token on Etherscan</div>
               </div>
               <div class="col">
-                <div class="p-2">February 25 - February 26, 2018, 17:00 GMT</div>
+                <div class="p-2"><a style="border-bottom: 1px solid #ccc;" href="https://etherscan.io/token/0x2611eb890ec83242ed0879a3e4e5b131a184f8da" target="_blank">0x2611eb890ec83242ed0879a3e4e5b131a184f8da</a></div>
               </div>
             </div>
-          -->
-            <div class="row no-gutters">
-              <div class="col-lg-3">
-                <div class="p-2">Phase-1 public sale</div>
-              </div>
-              <div class="col">
-                <!--<div class="p-2">February 27 - March 17, 2018, 17:00 GMT</div>-->
-                <div class="p-2">Dates will be announced later</div>
-              </div>
-            </div>
-            <div class="row no-gutters">
-              <div class="col-lg-3">
-                <div class="p-2">Phase-2 public sale</div>
-              </div>
-              <div class="col">
-                <!--<div class="p-2">March 18 - April 18, 2018</div>-->
-                <div class="p-2">Dates will be announced later</div>
-              </div>
-            </div>
-          </div>
-
-          <h3 class="mt-3">
-            Crowdsale Date
-          </h3>
-          <hr class="hr-lg m-0 hr-primary w-20">
-          <hr class="mt-0 mb-4 hr-blank">
-          <div class="container">
             <div class="row no-gutters">
               <div class="col-lg-3">
                 <div class="p-2">Type</div>
@@ -404,24 +403,43 @@
                 <div class="p-2">1 ETH = 15,000 STBT</div>
               </div>
             </div>
-            <!--
+          </div>
+
+          <hr class="mt-0 mb-4 hr-blank">
+          <h3>
+            Crowdsale Date
+          </h3>
+          <hr class="hr-lg m-0 hr-primary w-20">
+          <hr class="mt-0 mb-4 hr-blank">
+          <div class="container">
+          <!--
             <div class="row no-gutters">
               <div class="col-lg-3">
-                <div class="p-2">Crowdsale hard cap</div>
+                <div class="p-2">Phase-1 whitelisted sale</div>
               </div>
               <div class="col">
-                <div class="p-2">4,000 ETH (if sold out during Phase-1)</div>
-              </div>
-            </div>
-            <div class="row no-gutters">
-              <div class="col-lg-3">
-                <div class="p-2">Crowdsale soft cap</div>
-              </div>
-              <div class="col">
-                <div class="p-2">400 ETH</div>
+                <div class="p-2">February 25 - February 26, 2018, 17:00 GMT</div>
               </div>
             </div>
           -->
+            <div class="row no-gutters">
+              <div class="col-lg-3">
+                <div class="p-2">Phase-1 public sale</div>
+              </div>
+              <div class="col">
+                <!--<div class="p-2">February 27 - March 17, 2018, 17:00 GMT</div>-->
+                <div class="p-2">Dates will be announced later</div>
+              </div>
+            </div>
+            <div class="row no-gutters">
+              <div class="col-lg-3">
+                <div class="p-2">Phase-2 public sale</div>
+              </div>
+              <div class="col">
+                <!--<div class="p-2">March 18 - April 18, 2018</div>-->
+                <div class="p-2">Dates will be announced later</div>
+              </div>
+            </div>
           </div>
 
           <div class="mt-3">
@@ -472,6 +490,14 @@
               </a>
             </div>
             -->
+            <div class="col-lg-2 py-2">
+              <a href="https://www.youtube.com/channel/UCdEWqhuO2TqfDPghSXnd0MA" target="_blank" class="social-icons">
+                <div class="fab fa-youtube icon-5x text-primary"></div>
+                <p>youtube.com</p>
+              </a>
+            </div>
+            
+
             <div class="col-lg-2 py-2">
               <a href="https://medium.com/stocksbet" target="_blank" class="social-icons">
                 <div class="fab fa-medium icon-5x text-primary"></div>
