--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,16 @@
 
 <!-- ======== @Region: body ======== -->
 <body class="page page-index-static navbar-layout-default animates-pending">
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_EN/sdk.js#xfbml=1&version=v2.12';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
   <!-- @plugin: page loading indicator, delete to remove loader -->
   <div class="page-loader" data-toggle="page-loader" style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; background-color: rgb(46, 204, 113); z-index: 9999999; display: none;"><div class="fl spinner6" style="position: absolute; left: 681px; top: 513.5px;"><div class="rect1"></div><div class="rect2"></div><div class="rect3"></div><div class="rect4"></div><div class="rect5"></div></div></div>
 
@@ -68,11 +78,15 @@
                 </h1>
               </a>
               <div class="header-divider d-none d-lg-block"></div>
-              <div class="header-slogan d-none d-lg-block">Smart Contract based DApp for betting on the price of Stocks</div>
+              <div class="row mt-1">
+                <div class="ml-2 mt-1 header-slogan d-none d-lg-block">Smart Contract based DApp for betting on the price of Stocks</div>
+                <div class="ml-2"><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+                <div class="ml-2 fb-share-button" data-href="http://stocks.bet/" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fstocks.bet%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+              </div>
           </div>
           <div class="navbar navbar-expand-md navbar-static-top">
               <div class="navbar-main collapse">
-                <h5 class="text-center font-weight-light mt-2 mb-0 text-muted"><a href="/app/">Refrash the page</a></h5>
+                <h5 class="text-center font-weight-light mt-1 mb-0 text-muted"><a href="/app/">Refrash the page</a></h5>
               </div>
           </div>
         </div>
@@ -80,7 +94,13 @@
     </div>
   </div>
 
-
+  <div id="containerBettingMainNet" class="container" style="display: none;">
+    <hr class="hr-lg mt-5 mb-3 w-10 mx-auto hr-primary">
+    <h4 class="text-center font-weight-light my-0">
+      To contine you need change the network MetaMask to RopstenTestNet.
+    </h4>
+    <hr class="hr-lg mt-3 mb-3 w-10 mx-auto hr-primary">
+  </div>
   <div id="containerBettingWarning" class="container" style="display: none;">
       <hr class="hr-lg mt-5 mb-3 w-10 mx-auto hr-primary">
       <h4 class="text-center font-weight-light my-0">
@@ -96,6 +116,9 @@
   </div>
 
   <div id="containerBetting" class="container" style="display: none;">
+      <h4>
+          Next betting will open at 16:30 NY 25.02.2018
+      </h4>
       <hr class="hr-lg mt-5 mb-3 w-10 mx-auto hr-primary">
         <h2 class="text-center text-uppercase font-weight-bold my-0">
           <span id='currentBettingName'></span> <span id='statusCurrentBetting'></span>
@@ -263,18 +286,47 @@
         </div>
       </div>
 
-
-
-
-
-
-
-
-
-
-
-
+      <a id="aShowContainerTradingView" href='javascript:App.showTradingView()'>Show Stocks price Graph (as additional information)</a>
+      <a id="aHideContainerTradingView" href='javascript:App.hideTradingView()' style="display: none;" >Hide Stocks price Graph (as additional information</a>
       
+      <div id="containerTradingView" class="container" style="height: 500px; display: none;">
+        <div class="tradingview-widget-container">
+            <div id="tv-medium-widget"></div>
+            <div class="tradingview-widget-copyright"><span class="blue-text"><a href="https://www.tradingview.com/symbols/AAPL/" rel="noopener" target="_blank"><span class="blue-text">Apple</span></a>, <a href="https://www.tradingview.com/symbols/GOOGL/" rel="noopener" target="_blank"><span class="blue-text">Google</span></a>, <a href="https://www.tradingview.com/symbols/MSFT/" rel="noopener" target="_blank"><span class="blue-text">Microsoft</span></a></span> <span class="blue-text">Quotes</span> by TradingView</div>
+            <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+            <script type="text/javascript">
+            new TradingView.MediumWidget(
+            {
+            "container_id": "tv-medium-widget",
+            "symbols": [
+              [
+                "Apple",
+                "NASDAQ:AAPL|1d"
+              ],
+              [
+                "Google",
+                "NASDAQ:GOOGL|1d"
+              ],
+              [
+                "Microsoft",
+                "NASDAQ:MSFT|1d"
+              ]
+            ],
+            "greyText": "Quotes by",
+            "gridLineColor": "#e9e9ea",
+            "fontColor": "#83888D",
+            "underLineColor": "#dbeffb",
+            "trendLineColor": "#4bafe9",
+            "width": "100%",
+            "height": "100%",
+            "locale": "en"
+          }
+            );
+            </script>
+          </div>
+          <!-- TradingView Widget END -->
+      </div>
+
 
 
       <div class="modal fade"  id="placeBetModal">
@@ -326,6 +378,13 @@
                 <li>The application must generate tokens according to a standard crytptographic algorithm acting as a proof of the value nodes are contributing to the application.</li>
               </ul>
               <a href='https://github.com/DavidJohnstonCEO/DecentralizedApplications'>The General Theory of Decentralized Applications, Dapps</a>
+            </div>
+
+            <div class='mt-5' data-animate-delay="0.4" data-animate-offset="100%" style="animation-delay: 0.4s;">
+              <p>Useful financial links:</p>
+              <ul>
+                <li><a href='http://business.nasdaq.com/discover/events/trading-hours' target='_blank'>Nasdaq Market Calendar &amp; Trading Hours</a></li>
+              </ul>
             </div>
           </div>
         </div>
