--- a/index.html
+++ b/index.html
@@ -460,7 +460,6 @@
         </div>
         <div class="container p-4">
           <div class="row text-center">
-            <div class="col-lg-2 py-2"></div>
             <!--
             <div class="col-lg-2 py-2">
               <a href="https://telegram.me/STBT" target="_blank">
@@ -482,14 +481,12 @@
                 <p>twitter.com/<br>StocksBet</p>
               </a>
             </div>
-            <!--
             <div class="col-lg-2 py-2">
               <a href="https://reddit.com/r/STBT" target="_blank" class="social-icons">
                 <div class="fab fa-reddit icon-5x text-primary"></div>
-                <p>reddit.com<br>/r/STBT</p>
+                <p>reddit.com<br>/user/stocksBet</p>
               </a>
             </div>
-            -->
             <div class="col-lg-2 py-2">
               <a href="https://www.youtube.com/channel/UCdEWqhuO2TqfDPghSXnd0MA" target="_blank" class="social-icons">
                 <div class="fab fa-youtube icon-5x text-primary"></div>
