--- a/index.html
+++ b/index.html
@@ -130,28 +130,28 @@
         <div class="col-lg-3 py-2" data-animate="fadeIn" data-animate-delay="0.1" style="animation-delay: 0.1s;">
           <i class="fa fa-hand-point-right icon-5x text-primary"></i>
           <h4 class="mt-2">
-            BET
+            Bet on stock's price
           </h4>
           <p>Think Microsoft Stocks is going to pump? Bet on it to win more ETH.</p>
         </div>
         <div class="col-lg-3 py-2" data-animate="fadeIn" data-animate-delay="0.2" style="animation-delay: 0.2s;">
           <i class="fa fa-trophy icon-5x text-primary"></i>
           <h4 class="mt-2">
-            WIN
+            Win cryptocurrency 
           </h4>
           <p>Bull or Bear market, keep winning ETH.</p>
         </div>
         <div class="col-lg-3 py-2" data-animate="fadeIn" data-animate-delay="0.3" style="animation-delay: 0.3s;">
           <i class="fa fa-users icon-5x text-primary"></i>
           <h4 class="mt-2">
-            TRUSTLESS
+            Trustless consensus
           </h4>
           <p>No signups or deposits 100% fair & open source.</p>
         </div>
         <div class="col-lg-3 py-2" data-animate="fadeIn" data-animate-delay="0.4" style="animation-delay: 0.4s;">
           <i class="fa fa-chart-line icon-5x text-primary"></i>
           <h4 class="mt-2">
-            TOKEN
+            Holding STBT tokens
           </h4>
           <p>Earn quarterly payouts in ETH by holding STBT tokens.</p>
         </div>
