Add Crowdsale Date

--- a/index.html
+++ b/index.html
@@ -139,21 +139,22 @@
           <h4 class="mt-2">
             Win cryptocurrency 
           </h4>
-          <p>Bull or Bear market, keep winning ETH.</p>
+          <p>Bull or Bear market, you can hedge price change risks when the market close.</p>
+          
         </div>
         <div class="col-lg-3 py-2" data-animate="fadeIn" data-animate-delay="0.3" style="animation-delay: 0.3s;">
           <i class="fa fa-users icon-5x text-primary"></i>
           <h4 class="mt-2">
             Trustless consensus
           </h4>
-          <p>No signups or deposits 100% fair & open source.</p>
+          <p>Don't need registration or deposits, 100% fair in Blockchain & open source. </p>
         </div>
         <div class="col-lg-3 py-2" data-animate="fadeIn" data-animate-delay="0.4" style="animation-delay: 0.4s;">
           <i class="fa fa-chart-line icon-5x text-primary"></i>
           <h4 class="mt-2">
             Holding STBT tokens
           </h4>
-          <p>Earn quarterly payouts in ETH by holding STBT tokens.</p>
+          <p>Get dividend payouts in ETH by holding STBT tokens.</p>
         </div>
       </div>
     </div>
@@ -181,9 +182,19 @@
         <div class="container">
           <div class="row">
             <div data-animate-delay="0.4" data-animate-offset="100%" style="animation-delay: 0.4s;">
-              <p class="lead">STBT is an Ethereum Smart Contract based DApp for betting on the price of Stocks and win from everyone who bets against you.</p>
-              <p>Users bet on a stocks that performs the best among all the other competing ones in a specific time period. Bets are placed and rewards are claimed using Metamask plugin for Chrome/Firefox or the Ethereum based Mist browser.</p>
-              <p class="mb-0">Being completely secured by the blockchain, no one has control over the race or user funds once a contract is deployed and a race is announced.</p>
+              <p class="lead">Stocks.Bet decentralized application based on the deployed open source Ethereum smart contract for betting on the price of NASDAQ listed stocks and win from everyone who bets against you.</p>
+              <p>This contract control the funds, calculate the best performing stocks (with bet lock and bet close prices) and prepare reward for the winning users to collect. Price fetched from <a href='https://www.alphavantage.co'>https://www.alphavantage.co</a> API through Oraclize.it at the beginning (16:30 NY) and end of the bet period (10:00 NY).</p>
+              <p>
+                Now there is three companies stocks: 
+                <ul>
+                  <li>Microsoft, MSFT</li>
+                  <li>Google, GOOG</li>
+                  <li>Apple, AAPL</li>
+                  </ul>
+              </p>
+              <p>Bettors place bet on stocks that performs the best among all the other competing ones in a specific time period. Bets are placed and rewards are claimed using Metamask plugin for Chrome / Firefox / Opera / Brave.</p>
+
+              <p class="mb-0">Being completely secured by the Blockchain, no one has control over the stocks rally or user funds once a contract is deployed and a rally is announced.</p>
             </div>
           </div>
         </div>
@@ -289,20 +300,21 @@
       <div class="bg-dark  mt-6">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-lg-5 divider-diagonal divider-diagonal-r divider-dark bg-img blazy-bg b-loaded" style="background-image: url(&quot;assets/img/backgrounds/computer-screens.jpg&quot;);"></div>
+            <div class="col-lg-5 divider-diagonal divider-diagonal-r divider-dark bg-img blazy-bg b-loaded" style="background-image: url(&quot;assets/img/backgrounds/stocks2bg2.jpg&quot;);"></div>
             <div class="col-lg-5 py-5">
               <hr class="hr-lg mt-0 mb-2 w-10 ml-0 hr-primary">
-              <h2 class="display-4 text-slab text-white text-uppercase mt-0 mb-5">
-                Choose <span class="text-primary font-weight-bold">STBT</span> to bet
+              <h2 class="display-5 text-slab text-white text-uppercase mt-0 mb-5">
+                Choose <span class="text-primary font-weight-bold">STBT Token</span> to be
+                Bankroll holder
               </h2>
               <div class="row mb-3">
                 <div class="col-2 col-md-1 text-center"> <i class="fas fa-check text-primary icon-2x"></i>
                 </div>
                 <div class="col-10 col-md-11 text-grey">
                   <h4 class="font-weight-bold text-white text-uppercase">
-                    quarterly payouts
+                    dividend payouts
                   </h4>
-                  <p>Earn quarterly payouts in ether by holding STBT tokens</p>
+                  <p>Get fixed income in ETH by holding STBT tokens.<br> 5% takeout from all the betting pools goes to token holders.</p>
                 </div>
               </div>
               <div class="row mb-3">
@@ -310,19 +322,9 @@
                 </div>
                 <div class="col-10 col-md-11 text-grey">
                   <h4 class="font-weight-bold text-white text-uppercase">
-                    fixed income
+                     discounted and features
                   </h4>
-                  <p>5% takeout from all the betting pools goes to token holders</p>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col-2 col-md-1 text-center"> <i class="fas fa-check text-primary icon-2x"></i>
-                </div>
-                <div class="col-10 col-md-11 text-grey">
-                  <h4 class="font-weight-bold text-white text-uppercase">
-                    features and discounted
-                  </h4>
-                  <p>Bet with STBT token to unlock features and enjoy discounted takeout</p>
+                  <p>Bet with STBT token to unlock features and enjoy discounted takeout.</p>
                 </div>
               </div>
               <div class="row mb-3">
@@ -332,7 +334,7 @@
                   <h4 class="font-weight-bold text-white text-uppercase">
                     Voting
                   </h4>
-                  <p>Vote on takeout rate, game rules and features</p>
+                  <p>Vote on takeout rate, game rules and features.</p>
                 </div>
               </div>
             </div>
@@ -349,7 +351,7 @@
           <h3>
             STBT Token
           </h3>
-          We are applied for listing on the <a  style="border-bottom: 1px solid #ccc;" href="https://idex.market">IDEX Exchange</a>.
+          We are applied for listing on the <a href="https://idex.market">IDEX Exchange</a>.
           <hr class="mt-0 mb-4 hr-blank">
           <hr class="hr-lg m-0 hr-primary w-20">
           <hr class="mt-0 mb-4 hr-blank">
@@ -359,7 +361,7 @@
                 <div class="p-2">STBT Token on Etherscan</div>
               </div>
               <div class="col">
-                <div class="p-2"><a style="border-bottom: 1px solid #ccc;" href="https://etherscan.io/token/0x2611eb890ec83242ed0879a3e4e5b131a184f8da" target="_blank">0x2611eb890ec83242ed0879a3e4e5b131a184f8da</a></div>
+                <div class="p-2"><a href="https://etherscan.io/token/0x2611eb890ec83242ed0879a3e4e5b131a184f8da" target="_blank">0x2611eb890ec83242ed0879a3e4e5b131a184f8da</a></div>
               </div>
             </div>
             <div class="row no-gutters">
@@ -378,9 +380,10 @@
                 <div class="p-2">125,000,000 STBT</div>
               </div>
             </div>
+
             <div class="row no-gutters">
               <div class="col-lg-3">
-                <div class="p-2">Crowdsale</div>
+                <div class="p-2"> &#8226; Crowdsale</div>
               </div>
               <div class="col">
                 <div class="p-2">100,000,000 STBT</div>
@@ -388,21 +391,20 @@
             </div>
             <div class="row no-gutters">
               <div class="col-lg-3">
-                <div class="p-2">Phase-1 rate (incl. bonus)</div>
+                <div class="p-2"> &#8226; <a href='https://medium.com/stocksbet/stocks-bet-bounty-program-9dd60b2f8c0a'>Bounty Program</a></div>
               </div>
               <div class="col">
-                <div class="p-2">1 ETH = 25,000 STBT</div>
+                <div class="p-2">6,250,000 STBT</div>
               </div>
             </div>
             <div class="row no-gutters">
-              <div class="col-lg-3">
-                <div class="p-2">Phase-2 rate</div>
+                <div class="col-lg-3">
+                  <div class="p-2"> &#8226; Founders Token</div>
+                </div>
+                <div class="col">
+                  <div class="p-2">18,750,000 STBT</div>
+                </div>
               </div>
-              <div class="col">
-                <!--<div class="p-2">Refer to Whitepaper</div>-->
-                <div class="p-2">1 ETH = 15,000 STBT</div>
-              </div>
-            </div>
           </div>
 
           <hr class="mt-0 mb-4 hr-blank">
@@ -412,23 +414,32 @@
           <hr class="hr-lg m-0 hr-primary w-20">
           <hr class="mt-0 mb-4 hr-blank">
           <div class="container">
-          <!--
+
+
+
             <div class="row no-gutters">
               <div class="col-lg-3">
                 <div class="p-2">Phase-1 whitelisted sale</div>
               </div>
               <div class="col">
-                <div class="p-2">February 25 - February 26, 2018, 17:00 GMT</div>
+                <div class="p-2">
+                  <b>March 25 - March 26, 2018, 8:00 GMT</b>
+                  <br> 1 ETH = 25,000 STBT
+                </div>
               </div>
             </div>
-          -->
+
+
+
             <div class="row no-gutters">
               <div class="col-lg-3">
                 <div class="p-2">Phase-1 public sale</div>
               </div>
               <div class="col">
-                <!--<div class="p-2">February 27 - March 17, 2018, 17:00 GMT</div>-->
-                <div class="p-2">Dates will be announced later</div>
+                <div class="p-2">
+                  March 27 - April 30
+                  <br> 1 ETH = 25,000 STBT
+                </div>
               </div>
             </div>
             <div class="row no-gutters">
@@ -436,8 +447,10 @@
                 <div class="p-2">Phase-2 public sale</div>
               </div>
               <div class="col">
-                <!--<div class="p-2">March 18 - April 18, 2018</div>-->
-                <div class="p-2">Dates will be announced later</div>
+                <div class="p-2">
+                  May 1 - June 30
+                  <br> 1 ETH = from 18,750 to 12,500 STBT
+                </div>
               </div>
             </div>
           </div>
@@ -448,6 +461,16 @@
         </div>
       </div>
     </div>
+    <style>
+      #STBT a {
+        color: #00ADBB;
+        text-decoration: none;
+      }
+      #STBT a:hover {
+        color: #007e88;
+        text-decoration: underline;
+      }
+    </style>
 
     <div id="features" class="bg-white">
         <div class="bg-dark text-white p-3 text-center divider-arrow divider-arrow-b divider-dark">
@@ -482,7 +505,7 @@
               </a>
             </div>
             <div class="col-lg-2 py-2">
-              <a href="https://reddit.com/r/STBT" target="_blank" class="social-icons">
+              <a href="https://reddit.com/user/stocksBet/" target="_blank" class="social-icons">
                 <div class="fab fa-reddit icon-5x text-primary"></div>
                 <p>reddit.com<br>/user/stocksBet</p>
               </a>
